syntax = "proto3";

package wheel;

import "meta.proto";

message UpdateKeyRangesRequest {
  repeated meta.KeyRange key_ranges = 1;
}

message UpdateKeyRangesResponse {}


message KvPutRequest {
  bytes key = 1;
  bytes value = 2;
}

message KvPutResponse {}

message KvGetRequest {
  bytes key = 1;
}

message KvGetResponse {
  bytes value = 1;
}

message KvDeleteRequest {
  bytes key = 1;
}

message KvDeleteResponse {}

message KvOpRequest {
  oneof op {
    KvPutRequest put = 1;
    KvGetRequest get = 2;
    KvDeleteRequest delete = 3;
  }
}

message KvOpResponse {
  oneof op {
    KvPutResponse put = 1;
    KvGetResponse get = 2;
    KvDeleteResponse delete = 3;
  }
}

message KvRequest {
  repeated KvOpRequest ops = 1;
}

message KvResponse {
  repeated KvOpResponse ops = 1;
}

service WheelService {
  rpc UpdateKeyRanges(UpdateKeyRangesRequest) returns (UpdateKeyRangesResponse);
}

message RaftRequest {
  bytes data = 1;
}

message RaftResponse {
  bytes data = 1;
}

service RaftService {
  rpc AppendEntries(RaftRequest) returns (RaftResponse);
  rpc InstallSnapshot(RaftRequest) returns (RaftResponse);
  rpc Vote(RaftRequest) returns (RaftResponse);
}
